# crm

./: .dockerignore  .gitignore  Dockerfile  Dockerfile_client  Dockerfile_run  Dockerfile_server  Dockerfile_typescript  Gruntfile.js  README  README.md  React-Wrapper.js  Sample.hs  Sample.html  app.js  app.jsx  bower.json  build.sh  cp.sh  crm  crm.sql  dev.sh  docker-compose-build.yml  docker-compose-dev.yml  docker-compose-fay-build.yml  docker-compose-fay.yml  docker-compose-main.yml  docker-compose-new.yml  docker-compose-prod.yml  docker-compose-server-build.yml  docker-compose.yml  dockerfile  gulpfile.js  index.html  main.js  my.conf.js  package.json  pom.xml  popis  prod.sh  table-creation.sql  (+1 more)
client/: .dir-locals.el  .gitignore  .lvimrc  README.md  bower.json  gulpfile.js  index.html  package-lock.json  package.json  style.css  webpack.config.js
client/files/: index.html  style.css
client/js/: crm.js
client/js/actions/: CompanyActions.js  LoadInitialActions.js  LocalInitialActions.js  MaintenanceActions.js
client/js/components/: BigMachine.react.js  CalendarPopover.react.js  CompaniesList.react.js  CompanyDetail.react.js  CompanyNew.react.js  CompanyRow.react.js  EditableField.react.js  Machine.react.js  MachineDetail.react.js  Maintenance.react.js  MaintenanceForm.react.js  MaintenancesList.react.js  Navigation.react.js  PlannedMaintenances.react.js  RecordMaintenance.react.js  Table.react.js  TheApp.react.js
client/js/constants/: CompanyConstants.js  MachineConstants.js
client/js/dispatcher/: AppDispatcher.js
client/js/server/: CrmApi.js  example.js
client/js/stores/: CompanyFormStore.js  CompanyStore.js  EmployeeStore.js  MachineStore.js  MaintenanceStore.js
client/js/utils/: Moment.js  fluxifyJson.js  formatDate.js  listenToStoreMixin.js  listenToStoreSimpleMixin.js  listenToStoresMixin.js  storeMixin.js  togglableStateMixin.js
client/playground/: Main.hs  Other.hs  Playground.hs  index.html
client/scss/: style.scss
client/src/: Dispatch.hs  Main.hs  NoMain.hs
client/src/Crm/: Data.hs  Helpers.hs  Router.hs  RoutesHandler.hs  Runtime.hs  Server.hs  Types.hs  Validation.hs
client/ts/: .dockerignore  Dockerfile  notes  package-lock.json  package.json  pdf.mjs  q1.sql  query.sql  run.sh  schema.sql  test.mjs  tsconfig.json
client/ts/public/: index.html
core/: gulpfile.js  haskell-react.cabal  karma.conf.js
core/src/: HaskellReact.hs
core/test/: HaskellReactSpec.hs
doc/: Manuál.md  README_cs.md
fay-googlemaps/src/: GoogleMaps.hs
fay-jquery/src/: JQuery.hs
fay-moment/src/: Moment.hs
fay-react/core/: gulpfile.js  haskell-react.cabal
fay-react/core/src/HaskellReact/: React.hs
fay-react/core/src/HaskellReact/Tag/: Controls.hs  Hyperlink.hs  Input.hs  Option.hs
fay-react/core/test/: HaskellReactSpec.hs
files/: React-Wrapper.js  ReactWrapper.js  Sample.html
helpers/: .gitignore  Scenarios.md  alter-employee.sql  alter-machine-type.sql  alter-machine.sql  check-password.sh  create-bundle.sh  create-company.sh  create-employee.sh  create-machine.sh  create-tables.sh  create-tables.sql  create-upkeep.sh  crm  crm-dev.nginx  delete-upkeep.sh  deploy.sh  drops.sql  dump.sql  generate-client.sh  inserts.sql  machines-graph.dot  photo.sh  schema.sh  schema.sql  table-creation.sql  test-cookie.sh  update-company.sh  update-machine-type.sh  update-machine.sh  update-upkeep.sh
helpers/deploy-dir/: bootstrap  js  robots.txt  style.css
info/: cases  desc  procedure.sql  testfile  trigger.sql
js/: app.js  bundle.js  crm.js
js/actions/: CompanyActions.js
js/components/: App.react.js  CompanyDetail.react.js  CompanyNew.react.js  CompanyRow.react.js  Navigation.react.js  Table.react.js  TheApp.react.js
js/constants/: CompanyConstants.js
js/dispatcher/: AppDispatcher.js
js/stores/: CompaniesStore.js  CompanyDetailStore.js  CompanyStore.js
sass/: style.scss
script/: bundle.js  crm.js
script/actions/: CompanyActions.js
script/components/: AppMainPage.react.js  Navigation.react.js  Table.react.js
script/constants/: CompanyConstants.js
script/stores/: CompaniesStore.js  CurrentPageStore.js
server/: .gitignore  .lvimrc  build-server.sh  client  help.txt  server.cabal  shell.nix  stack.yaml
server/files/: companies.sql  create-tables.sh
server/gen-api/: Main.hs
server/gen-pass/: Main.hs
server/generate/: Main.hs
server/insert-pass/: Main.hs
server/restart/: Main.hs
server/run-server/: Main.hs
server/src/: Main.hs  Server.hs
server/src/Crm/: TH.hs
server/src/Crm/Server/: Base.hs  Boilerplate.hs  CachedCore.hs  Core.hs  DB.hs  Handler.hs  Helpers.hs  ListParser.hs  Parsers.hs  Tuple.hs  Types.hs
server/src/Crm/Server/Api/: CompanyResource.hs  ContactPersonResource.hs  EmployeeResource.hs  LoginResource.hs  MachineKindResource.hs  MachineResource.hs  MachineTypeResource.hs  MkPhotoResource.hs  PhotoMetaResource.hs  PhotoResource.hs  PrintResource.hs  TaskResource.hs  UpkeepResource.hs
server/src/Crm/Server/Api/Company/: ContactPersonResource.hs  MachineResource.hs  RecommendationResource.hs  UpkeepResource.hs
server/src/Crm/Server/Api/Employee/: EmployeeResource.hs  TaskResource.hs  UpkeepResource.hs
server/src/Crm/Server/Api/Machine/: PhotoResource.hs  ReassignResource.hs
server/src/Crm/Server/Api/MachineType/: MachineResource.hs  PhotoResource.hs
server/src/Crm/Server/Api/Upkeep/: PhotoResource.hs  ReopenResource.hs
server/src/Crm/Server/Database/: MachineType.hs  PrimaryKeys.hs  Types.hs  UpkeepMachine.hs  UpkeepSequence.hs
server/src/Crm/Shared/: Data.hs
server/src/Server/: Data.hs  Util.hs
server/src2/: Main.hs
server/test/: MainTestSuite.hs  TestSuite1.hs  test-suite.hs
src/: Event.hs  GoogleMaps.hs  HaskellReact.hs  Main.hs  Moment.hs  Sample.hs
src/HaskellReact/: Component.hs  ComponentData.hs  Event.hs  ReadFay.hs  Router.hs
src/Tag/: Construct.hs  Input.hs
test/: Class.hs  Class.test.js  HaskellReactSpec.hs  class.js  haskellReactSpec.js  test.js
wrappers/: gulpfile.js  package.json
wrappers/files/: Sample.html
wrappers/src/: Main.hs
(+156 files in other folders)
