Name:                server
Version:             0.1
Synopsis:            Server displaying api for the client part of CRM app
License:             AllRightsReserved
Author:              Jakub Ryška
Maintainer:          ryskajakub@seznam.cz
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.10

flag build-gen-api
  description: Run the executable creating typesafe access to the server API.
  default:     False
  manual:      True

flag build-insert-pass
  description: Builds the executable for inserting the password hash into db.
  default:     False
  manual:      True

flag build-run-server
  description: Builds the server executable.
  default:     False
  manual:      True

flag profiling
  description: Turns on rtsopts
  default:     False
  manual:      True

Library
  default-language:  Haskell2010
  hs-source-dirs:    src, shared
  ghc-options:       -Wall
  exposed-modules:
    Server ,
    Crm.Server.Api.CompanyResource ,
    Crm.Server.Api.Company.MachineResource ,
    Crm.Server.Api.Company.UpkeepResource ,
    Crm.Server.Api.Company.ContactPersonResource ,
    Crm.Server.Api.MachineResource ,
    Crm.Server.Api.Machine.PhotoResource ,
    Crm.Server.Api.MachineTypeResource ,
    Crm.Server.Api.UpkeepResource ,
    Crm.Server.Api.EmployeeResource ,
    Crm.Server.Api.Employee.UpkeepResource ,
    Crm.Server.Api.PhotoMetaResource ,
    Crm.Server.Api.PhotoResource ,
    Crm.Server.Api.ContactPersonResource ,
    Crm.Server.Api.MachineKindResource ,
    Crm.Server.Api.PrintResource ,
    Crm.Server.Handler ,
    Crm.Server.Base ,
    Crm.Server.Boilerplate ,
    Crm.Server.DB ,
    Crm.Server.Helpers ,
    Crm.Server.Types ,
    Crm.Server.Core ,
    Crm.Server.CachedCore ,
    Crm.Server.Parsers ,
    Crm.TH ,

    Crm.Shared.Direction ,
    Crm.Shared.MyMaybe ,
    Crm.Shared.Company ,
    Crm.Shared.ContactPerson ,
    Crm.Shared.Machine ,
    Crm.Shared.MachineType ,
    Crm.Shared.MachineKind ,
    Crm.Shared.Api ,
    Crm.Shared.Upkeep ,
    Crm.Shared.UpkeepMachine ,
    Crm.Shared.YearMonthDay ,
    Crm.Shared.Employee ,
    Crm.Shared.UpkeepSequence ,
    Crm.Shared.PhotoMeta ,
    Crm.Shared.Photo ,
    Crm.Shared.ExtraField ,
    Crm.Shared.Login ,
    Crm.Shared.ServerRender

  Build-depends:
    base >= 4.6 && < 4.9 ,
    mtl >= 2.0 && < 2.3 ,
    template-haskell ,

    rest-core >= 0.36 && < 0.37  ,
    rest-types ,
    rest-wai ,
    wai ,
    warp ,

    regular ,
    async ,
    parsec ,
    resource-pool ,
    containers ,
    profunctors ,
    HTTP ,
    base64-string ,
    base64-bytestring ,
    opaleye >= 0.4.2.0 ,
    scrypt ,
    tagged ,
    tuple-th >= 0.2.4 ,
    lens ,
    text ,
    transformers ,
    transformers-compat ,
    json-schema ,
    aeson >= 0.8 && < 0.9 ,
    fay >= 0.23.1 && < 0.24 ,
    product-profunctors == 0.6.3 ,
    postgresql-simple ,
    safe ,
    time ,
    tuple ,
    text-icu ,
    bytestring

Test-Suite tests
  default-language:  Haskell2010
  type:              exitcode-stdio-1.0
  hs-source-dirs:    test, src, shared
  main-is:           test-suite.hs
  build-depends:
    base ,
    mtl >= 2.0 && < 2.3 ,

    rest-types ,
    rest-core >= 0.36 && < 0.37  ,
    rest-types ,
    rest-wai ,
    wai ,
    warp ,

    regular ,
    async ,
    resource-pool ,
    parsec ,
    containers ,
    HTTP ,
    base64-string ,
    scrypt ,
    lens ,
    fay ,
    product-profunctors ,
    json-schema ,
    tuple ,
    tuple-th ,
    transformers ,
    transformers-compat ,
    opaleye >= 0.4.2.0 ,
    tasty >= 0.7 ,
    tasty-hunit ,
    tasty-smallcheck ,
    tasty-quickcheck ,
    smallcheck ,
    QuickCheck ,
    old-locale ,
    time ,
    random ,
    random-shuffle ,
    safe ,
    Unique ,
    postgresql-simple ,
    aeson ,
    text ,
    text-icu ,
    bytestring

Executable run-server
  default-language:  Haskell2010
  if flag(profiling)
    ghc-options:     -rtsopts -Wall -O2 -eventlog -threaded
  else
    ghc-options:     -Wall -O2
  main-is:           Main.hs
  hs-source-dirs:    run-server
  if flag(build-run-server)
    buildable: True
    build-depends:
      base >= 4.6 && < 4.9 ,
      server
  else
    buildable: False


Executable insert-pass
  default-language:  Haskell2010
  ghc-options:       -Wall
  main-is:           Main.hs
  hs-source-dirs:    insert-pass
  if flag(build-insert-pass)
    buildable: True
    build-depends:
      base >= 4.6 && < 4.9 ,
      haskeline ,
      transformers ,
      opaleye ,
      scrypt ,
      text , 
      server
  else
    buildable: False

Executable gen-api
  default-language:  Haskell2010
  ghc-options:       -Wall
  main-is:           Main.hs
  hs-source-dirs:    gen-api
  other-modules:
    Rest.Gen.Fay
  if flag(build-gen-api)
    buildable: True
    build-depends:
      base >= 4.6 && < 4.9 ,
      server ,
      rest-core ,
      haskell-src-exts >= 1.16.0 ,
      safe ,
      fclabels ,
      semigroups ,
      uniplate ,
      filepath ,
      directory ,
      Cabal ,
      regex-compat ,
      rest-gen >= 0.17.1
  else
    buildable: False
