Name:                server
Version:             0.1
Synopsis:            Server displaying api for the client part of CRM app
License:             AllRightsReserved
Author:              Jakub Ryška
Maintainer:          ryskajakub@seznam.cz
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.10

flag profiling
  description: Turns on rtsopts
  default:     False
  manual:      True

Library
  default-language:  Haskell2010
  hs-source-dirs:    src, shared
  ghc-options:       -j
  exposed-modules:
    Server ,
    Crm.Server.Api.CompanyResource ,
    Crm.Server.Api.Company.MachineResource ,
    Crm.Server.Api.Company.UpkeepResource ,
    Crm.Server.Api.Company.ContactPersonResource ,
    Crm.Server.Api.Company.RecommendationResource ,
    Crm.Server.Api.MachineResource ,
    Crm.Server.Api.Machine.PhotoResource ,
    Crm.Server.Api.MachineTypeResource ,
    Crm.Server.Api.MachineType.MachineResource ,
    Crm.Server.Api.UpkeepResource ,
    Crm.Server.Api.Upkeep.PhotoResource ,
    Crm.Server.Api.Upkeep.ReopenResource ,
    Crm.Server.Api.EmployeeResource ,
    Crm.Server.Api.Employee.UpkeepResource ,
    Crm.Server.Api.Employee.TaskResource ,
    Crm.Server.Api.PhotoMetaResource ,
    Crm.Server.Api.PhotoResource ,
    Crm.Server.Api.ContactPersonResource ,
    Crm.Server.Api.MachineKindResource ,
    Crm.Server.Api.PrintResource ,
    Crm.Server.Api.TaskResource ,
    Crm.Server.Handler ,
    Crm.Server.Base ,
    Crm.Server.Boilerplate ,
    Crm.Server.Database.PrimaryKeys ,
    Crm.Server.Database.Types ,
    Crm.Server.Database.UpkeepMachine ,
    Crm.Server.Database.UpkeepSequence ,
    Crm.Server.Database.MachineType ,
    Crm.Server.DB ,
    Crm.Server.Helpers ,
    Crm.Server.Types ,
    Crm.Server.Core ,
    Crm.Server.CachedCore ,
    Crm.Server.Parsers ,
    Crm.TH ,

    Crm.Shared.Task
    Crm.Shared.Direction ,
    Crm.Shared.MyMaybe ,
    Crm.Shared.Company ,
    Crm.Shared.ContactPerson ,
    Crm.Shared.Machine ,
    Crm.Shared.MachineType ,
    Crm.Shared.MachineKind ,
    Crm.Shared.Api ,
    Crm.Shared.Upkeep ,
    Crm.Shared.UpkeepMachine ,
    Crm.Shared.YearMonthDay ,
    Crm.Shared.Employee ,
    Crm.Shared.UpkeepSequence ,
    Crm.Shared.PhotoMeta ,
    Crm.Shared.Photo ,
    Crm.Shared.ExtraField ,
    Crm.Shared.Login ,
    Crm.Shared.ServerRender

  Build-depends:
    base ,
    mtl ,
    template-haskell ,

    rest-core ,
    rest-types ,
    rest-wai ,
    wai ,
    warp ,

    filemanip ,
    process ,
    unix-time ,
    async ,
    parsec ,
    resource-pool ,
    containers ,
    profunctors ,
    HTTP ,
    base64-string ,
    base64-bytestring ,
    opaleye ,
    scrypt ,
    tagged ,
    tuple-th ,
    lens ,
    text ,
    transformers ,
    transformers-compat ,
    json-schema ,
    aeson ,
    fay ,
    product-profunctors ,
    postgresql-simple ,
    safe ,
    time ,
    tuple ,
    text-icu ,
    gd ,
    bytestring

Test-Suite tests
  default-language:  Haskell2010
  type:              exitcode-stdio-1.0
  hs-source-dirs:    test, src, shared
  main-is:           test-suite.hs
  build-depends:
    base ,
    mtl ,

    rest-types ,
    rest-core ,
    rest-types ,
    rest-wai ,
    wai ,
    warp ,

    filemanip ,
    process ,
    unix-time ,
    async ,
    resource-pool ,
    parsec ,
    containers ,
    HTTP ,
    base64-string ,
    scrypt ,
    lens ,
    fay ,
    product-profunctors ,
    json-schema ,
    tuple ,
    tuple-th ,
    transformers ,
    transformers-compat ,
    opaleye ,
    tasty ,
    tasty-hunit ,
    tasty-smallcheck ,
    tasty-quickcheck ,
    smallcheck ,
    QuickCheck ,
    old-locale ,
    time ,
    random ,
    random-shuffle ,
    safe ,
    postgresql-simple ,
    aeson ,
    text ,
    text-icu ,
    gd ,
    bytestring

Executable run-server
  default-language:  Haskell2010
  if flag(profiling)
    ghc-options:     -rtsopts -O2 -eventlog -threaded
  else
    ghc-options:     -O2 -j
  main-is:           Main.hs
  hs-source-dirs:    run-server
  build-depends:
    base ,
    server


Executable insert-pass
  default-language:  Haskell2010
  main-is:           Main.hs
  hs-source-dirs:    insert-pass
  build-depends:
    base , 
    haskeline ,
    transformers ,
    opaleye ,
    scrypt ,
    text , 
    server

Executable gen-api
  default-language:  Haskell2010
  main-is:           Main.hs
  hs-source-dirs:    gen-api
  other-modules:
    Rest.Gen.Fay

  buildable: True
  build-depends:
    base ,
    server ,
    rest-core ,
    haskell-src-exts ,
    safe ,
    fclabels ,
    semigroups ,
    uniplate ,
    filepath ,
    directory ,
    Cabal ,
    regex-compat ,
    rest-gen 
