name:                haskell-react
version:             0.0.0
synopsis:            react bindings for Fay.
description:         react bindings for Fay.
category:            Web, Fay
build-type:          Simple
cabal-version:       >=1.8
data-files:          
  src/*.hs
  src/HaskellReact/*.hs
  src/HaskellReact/Tag/*.hs

library
  hs-source-dirs: src
  ghc-options: -Wall
  exposed-modules:     
      HaskellReact
    , HaskellReact.ReadFay
    , HaskellReact.ComponentData
    , HaskellReact.Event
    , HaskellReact.Component
    , HaskellReact.Tag.Construct
    , HaskellReact.Tag.Simple
    , HaskellReact.Tag.Hyperlink
    , HaskellReact.Tag.Input
  build-depends: 
    fay-base >= 0.18
